# tiny-rust-blockchain

./: Cargo.toml  README.md
src/: blockchain.rs  hash.rs  lib.rs  main.rs  merkle_tree.rs  utils.rs  wallet.rs
src/consensus/: mod.rs  pow.rs
src/network/: discovery.rs  dns.rs
src/primitives/: block.rs  transaction.rs
